package seedu.duke;

public enum Commands {
    BYE, LIST, BORROW, RETURN, DELETE, ADD
}

