@startuml
skinparam classAttributeIconSize 0
hide circle

class LeBook
class Parser
class Command
class SearchByTitleCommand extends Command {
 + execute(Library, Ui, ...)
 + undo()
}
class SearchByIDCommand extends Command {
 + execute(Library, Ui, ...)
 + undo()
}
note right of SearchByIDCommand : Other Search Commands (Author, Genre) similar
class Library {
 + getBookManager()
 + getBooks()
}
class BookManager {
 - books : List<Book>
 + getBookManagerInstance()
 + getBooks()
 + addNewBookToCatalogue(...)
 + deleteBook(...)
 + ...
}
class BookFinder {
 - booksToSearch : List<Book>
 + findBooksByTitle(String)
 + findBooksByShelfId(String)
 + ...
}
class Book {
 - title : String
 - author : String
 - bookID : String
 + getTitle()
 + getAuthor()
 + getGenre()
 + ...
}
class Ui

LeBook o-> Parser
LeBook o-> Library
LeBook o-> Ui
LeBook --> Command : executes >

Parser -> Command : <<create>>

SearchByTitleCommand --> Library : uses >
SearchByTitleCommand --> Ui : uses >
SearchByTitleCommand --> BookFinder : uses >
SearchByIDCommand --> Library : uses >
SearchByIDCommand --> Ui : uses >
SearchByIDCommand --> BookFinder : uses >


Library o-> BookManager

BookFinder --> BookManager : uses (to get list) >
BookFinder --> Book : uses >
BookManager o--> "*" Book
@enduml